# assignment1

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Components.hpp  EmtityManager.hpp  Entity.hpp  EntityManager.hpp  Game.cpp  Game.h  ReadConfig.cpp  ReadConfig.h  ShapeProperties.cpp  ShapeProperties.h  ShapeStruct.h  UIStruct.h  Vec2.cpp  Vec2.hpp  config.txt  config_detail.txt  main.cpp  main_demo.cpp  tut_main.cpp
